Update and rename 2022-07-04-info.md to 2022-07-14-profile.md

--- a/_posts/2022-07-14-profile.md
+++ b/_posts/2022-07-14-profile.md
@@ -1,11 +1,9 @@
 ---
 layout: single
-title: "Blog Information"
+title: "Profile"
 
 categories: "Information"
 ---
-
-Last updated: July 14, 2022
 
 # Profile
 - Owner: Lee, Jongmin (이종민)
